Try to fix macOS file launching